--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "pokedex",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "test": "tsc && jest",
+    "start": "node built/index.js",
+    "dev": "tsc && node built/utils/dynamoInitDB.js && npx nodemon -L",
+    "watch": "npx nodemon -L"
   },
   "repository": {
     "type": "git",
@@ -20,5 +24,34 @@
   "devDependencies": {
     "@types/node": "^17.0.12",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/jest": "^27.4.0",
+    "@types/joi": "^17.2.3",
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.5",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa__cors": "^3.1.1",
+    "@types/supertest": "^2.0.11",
+    "axios": "^0.25.0",
+    "dotenv": "^14.3.2",
+    "joi": "^17.5.0",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-oas3": "^2.4.1",
+    "koa-router": "^10.1.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/?(*.)+(spec|test).[j]s?(x)"
+    ]
   }
 }
